# IPO-allocation

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: settings.py
scripts/: setup_clickhouse.sql  tableau_queries.sql
src/dashboard/: app.py
src/engine/: __init__.py  anomaly.py  pipeline.py  pnl.py
src/model/: inference.py  lstm.py  preprocessor.py  train.py
tests/: test_data.py  test_engine.py  test_model.py
